[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/GUI/GUI.gd" type="Script" id=1]
[ext_resource path="res://Scenes/GUI/WinWindow.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/GUI/LoseWindow.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/GUI/HpBar.gd" type="Script" id=4]
[ext_resource path="res://Scenes/GoldLabel.gd" type="Script" id=5]
[ext_resource path="res://GFX/Placeholder/RPG Items/rpgItems.png" type="Texture" id=6]
[ext_resource path="res://GFX/Placeholder/item_box.png" type="Texture" id=7]
[ext_resource path="res://Scenes/GUI/hurt_overlay.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.235294, 0.819608, 0, 1 )
border_color = Color( 0.407843, 0.407843, 0.407843, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.807843, 0, 0, 1 )
border_color = Color( 0.407843, 0.407843, 0.407843, 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://GFX/JMH Beda.ttf"

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = SubResource( 3 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 18, 82, 12, 12 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
script = ExtResource( 1 )
win_menu = ExtResource( 2 )
lose_menu = ExtResource( 3 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 10.1785
margin_top = 8.98104
margin_right = 210.179
margin_bottom = 36.981
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.0392157, 1 )
custom_colors/font_color_shadow = Color( 0.0980392, 0.666667, 0, 1 )
max_value = 1.0
percent_visible = false
script = ExtResource( 4 )
_player = true

[node name="Label" type="Label" parent="."]
margin_left = 292.72
margin_top = 5.60917
margin_right = 372.72
margin_bottom = 54.6092
rect_pivot_offset = Vector2( 19.0359, 7.46178 )
custom_fonts/font = SubResource( 4 )
text = "<gold>"
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 244.935
margin_top = 13.1832
margin_right = 284.935
margin_bottom = 53.1832
texture = SubResource( 5 )
expand = true

[node name="WeaponItemBox" type="Sprite" parent="."]
position = Vector2( -130, 44 )
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 7 )
offset = Vector2( 1666.67, 0 )

[node name="TextureRect" type="TextureRect" parent="WeaponItemBox"]
margin_left = 1565.0
margin_top = -104.0
margin_right = 1770.0
margin_bottom = 104.0
expand = true

[node name="ArmorItemBox" type="Sprite" parent="."]
position = Vector2( -50, 44 )
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 7 )
offset = Vector2( 1666.67, 0 )

[node name="TextureRect" type="TextureRect" parent="ArmorItemBox"]
margin_left = 1562.0
margin_top = -106.0
margin_right = 1773.0
margin_bottom = 106.0
expand = true

[node name="BootsItemBox" type="Sprite" parent="."]
position = Vector2( 30, 44 )
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 7 )
offset = Vector2( 1666.67, 0 )

[node name="TextureRect" type="TextureRect" parent="BootsItemBox"]
margin_left = 1565.0
margin_top = -104.0
margin_right = 1775.0
margin_bottom = 107.0
expand = true

[node name="HurtOverlay" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="HurtOverlay"]

[node name="TextureRect" type="TextureRect" parent="HurtOverlay/CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -480.0
rect_pivot_offset = Vector2( 477.062, 482.189 )
texture = ExtResource( 8 )

[node name="TextureRect2" type="TextureRect" parent="HurtOverlay/CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 477.775
margin_top = -482.051
margin_right = 957.775
margin_bottom = -2.05054
rect_rotation = 90.0
texture = ExtResource( 8 )

[node name="TextureRect3" type="TextureRect" parent="HurtOverlay/CanvasLayer"]
margin_left = 475.725
margin_top = 473.674
margin_right = 955.725
margin_bottom = 953.674
rect_rotation = 180.0
texture = ExtResource( 8 )

[node name="TextureRect4" type="TextureRect" parent="HurtOverlay/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 547.494
margin_top = 475.725
margin_right = 547.494
margin_bottom = 475.725
rect_rotation = 270.0
texture = ExtResource( 8 )
